# tree-sitter-rsx

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Makefile  PARSER_CHECK_REPORT.md  PARSER_USAGE.md  Package.swift  README.md  README.zh-CN.md  RSX_PARSER_SUMMARY.md  RSX_PARSER_USAGE.md  binding.gyp  debug-template.js  example.rsx  extension.toml  go.mod  grammar.js  language-configuration.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requrements.md  rsx.tmLanguage.json  setup.py  test-invalid-syntax.js  test-parser.js  tree-sitter-rsx.wasm  tree-sitter.json
.codebuddy/rules/: rsx.mdc
.github/workflows/: node.js.yml
bindings/c/: tree-sitter-rsx.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/rust/: build.rs  lib.rs
example/: invalid-syntax.rsx  parse-result.json  sample.rsx  test-parser.js
examples/: 01-basic-structure.rsx  02-text-interpolation.rsx  03-conditional-rendering.rsx  04-list-rendering.rsx  05-nested-loops.rsx  06-expressions.rsx  07-html-attributes.rsx  08-client-components.rsx  09-raw-html.rsx  10-comments.rsx  11-self-closing-tags.rsx  12-complex-conditions.rsx  13-string-literals.rsx  14-minimal.rsx  15-template-only.rsx  16-rust-template.rsx  17-arithmetic.rsx  18-elseif-variants.rsx
languages/rsx/: config.toml
parser/: README.md  index.d.ts  index.js  package-lock.json  package.json
parser/tests/: parser.test.js
queries/: highlights.scm  injections.scm  locals.scm
src/: grammar.json  node-types.json  parser.c  rsx-parser.d.ts  rsx-parser.js  rsx.rs  scanner.c
test/corpus/: basic_structure.txt  client_components.txt  conditional_rendering.txt  expressions.txt  html_elements.txt  list_rendering.txt  raw_html.txt  scanner_edge_cases.txt  (+1 more)
zed-scm/: brackets.scm  config.toml  folds.scm  highlights.scm  indents.scm  injections.scm  outline.scm  overrides.scm  textobjects.scm
(+5 files in other folders)
