[package]
name = "tree-sitter-rsx"
description = "The rsx language"
version = "0.1.0"
authors = ["michael <michaelbguo@tencent.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "rsx"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/guobin211/tree-sitter-rsx"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
