[package]
name = "tree-sitter-rsx"
description = "RSX grammar for tree-sitter"
version = "0.1.9"
keywords = ["incremental", "parsing", "rsx", "tree-sitter"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/guobin211/tree-sitter-rsx"
edition = "2021"
license = "MIT"
build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]
autoexamples = false

[workspace]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"
tree-sitter = "0.25"

[build-dependencies]
cc = "1.0"
